fix spacing and alignment of search bar,buttons and footer. Also added padding to the search bar so the text starts more right of the search icon.

--- a/CC-01-google-landing-page/google.css
+++ b/CC-01-google-landing-page/google.css
@@ -35,17 +35,24 @@
 }
 
 #google{
-    margin-top:10rem;
-    margin-left:20rem;
+    margin:200px;
+    margin-left:45%;
+   position:relative
     
 }
+#move{
+   text-align: center;
+   margin-top:-150px;
+   margin-left: 20%;
+
+}
+
 
 .searchbar{
-    width:25rem;
-    height:3rem;
-    margin:10px;
-    
-    
+    width:100%;
+    height:50px;
+    display:block
+      
     
 }
 
@@ -53,31 +60,33 @@
     width:25rem;
     height:2rem;
  border-radius:25px;
- margin-left:15rem;
  position: relative;
  border: 1px solid lightgrey;
+ padding-left: 40px;
 
 }
 
 #glass{
     position:absolute;
     width:20px;
-    margin-left:250px;
-    margin-top:-25px;
+    margin-top:5px;
+    margin-left:-390px;
 
 }
 
 #mic{
     width:9px;
     position:absolute;
-    margin-left:610px;
-    margin-top:-25px;
+    margin-top:10px;
+    margin-left:-25px;
+  
 }
 
 
 .buttons{
     width:100%;
-    margin-left:20rem
+    margin-bottom:10px;
+   
     
 }
 
@@ -91,13 +100,11 @@
     border:0;
     width:8rem;
     height:2rem;
-}
-
-p{
-    margin-left:19.5rem;
-    margin-top:20px;
     
 }
+
+
+
 span{
     color:blue;
     text-decoration: underline;
@@ -116,8 +123,8 @@ span{
     
     width:30px;
     margin-top:2px;
+    opacity: 50%;
     
 }
-
 
 
